--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    id="WebApp_ID" version="2.5">
-    <display-name>library</display-name>
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-    <servlet>
-        <servlet-name>action</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>action</servlet-name>
-        <url-pattern>*.html</url-pattern>
-    </servlet-mapping>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+        <display-name>library</display-name>
+        <context-param>
+                <param-name>contextClass</param-name>
+                <param-value>
+                        org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+                </param-value>
+        </context-param>
+        <listener>
+                <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+        </listener>
+
+        <servlet>
+                <servlet-name>SpringDispatcher</servlet-name>
+                <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+                <init-param>
+                        <param-name>contextClass</param-name>
+                        <param-value>
+                                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+                        </param-value>
+                </init-param>
+                <init-param>
+                        <param-name>contextConfigLocation</param-name>
+                        <param-value>com.ch018.library.config</param-value>
+                </init-param>
+                <load-on-startup>1</load-on-startup>
+        </servlet>
+        <servlet-mapping>
+                <servlet-name>SpringDispatcher</servlet-name>
+                <url-pattern>/</url-pattern>
+        </servlet-mapping>
+
+        <session-config>
+                <session-timeout>30</session-timeout>
+        </session-config>
 </web-app>
