Added BooksInUse, Bookcase entity

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
  	</dependency>
+ 	<dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.18.0-GA</version>
+    </dependency>
+    <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-orm</artifactId>
+	<version>3.2.5.RELEASE</version>
+</dependency>
+            
   </dependencies>
   <build>
     <finalName>library</finalName>
