--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,12 +3,7 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <display-name>library</display-name>
-        <context-param>
-                <param-name>contextClass</param-name>
-                <param-value>
-                        org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-                </param-value>
-        </context-param>
+        
         <listener>
                 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
         </listener>
@@ -16,16 +11,6 @@
         <servlet>
                 <servlet-name>SpringDispatcher</servlet-name>
                 <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-                <init-param>
-                        <param-name>contextClass</param-name>
-                        <param-value>
-                                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-                        </param-value>
-                </init-param>
-                <init-param>
-                        <param-name>contextConfigLocation</param-name>
-                        <param-value>com.ch018.library.config</param-value>
-                </init-param>
                 <load-on-startup>1</load-on-startup>
         </servlet>
         <servlet-mapping>
@@ -36,4 +21,15 @@
         <session-config>
                 <session-timeout>30</session-timeout>
         </session-config>
+        
+        <context-param>
+   			<param-name>contextConfigLocation</param-name>
+   			<param-value>/WEB-INF/SpringDispatcher-servlet.xml</param-value>
+		</context-param>
+
+		<listener>
+   			<listener-class>
+      			org.springframework.web.context.ContextLoaderListener
+   			</listener-class>
+		</listener>
 </web-app>
