--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
  	</dependency>
+       <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
   </dependencies>
   <build>
     <finalName>library</finalName>
@@ -76,5 +82,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
   </properties>
 </project>
