--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,10 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <display-name>library</display-name>
+        <context-param>
+		<param-name>log42jConfigLocation</param-name>
+		<param-value>classpath:log4j2.xml</param-value>
+		</context-param>
         
         <listener>
                 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -17,6 +21,30 @@
                 <servlet-name>SpringDispatcher</servlet-name>
                 <url-pattern>/</url-pattern>
         </servlet-mapping>
+        <servlet-mapping>
+    		<servlet-name>SpringDispatcher</servlet-name>
+    		<url-pattern>*.css</url-pattern>
+		</servlet-mapping>
+	 
+		<servlet-mapping>
+	    	<servlet-name>SpringDispatcher</servlet-name>
+	    	<url-pattern>*.js</url-pattern>
+		</servlet-mapping>
+	 
+		<servlet-mapping>
+	    	<servlet-name>SpringDispatcher</servlet-name>
+	    	<url-pattern>*.gif</url-pattern>
+		</servlet-mapping>
+	 
+		<servlet-mapping>
+	    	<servlet-name>SpringDispatcher</servlet-name>
+	    	<url-pattern>*.jpg</url-pattern>
+		</servlet-mapping>
+	 
+		<servlet-mapping>
+	    	<servlet-name>SpringDispatcher</servlet-name>
+	    	<url-pattern>*.png</url-pattern>
+		</servlet-mapping>
 
         <session-config>
                 <session-timeout>30</session-timeout>
