--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+                <dependency>
+	                <groupId>javax.servlet.jsp</groupId>
+	                <artifactId>jsp-api</artifactId>
+	                <version>2.2</version>
+                </dependency>
+               
 	</dependencies>
 	<build>
 		<finalName>library</finalName>
