Orders and bookinuses

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -60,4 +60,11 @@
       			org.springframework.web.context.ContextLoaderListener
    			</listener-class>
 		</listener>
+		
+		<context-param>   
+       		<param-name>log4jConfiguration</param-name>
+       		<param-value>log4j2.xml</param-value>
+    	</context-param>
+     
+
 </web-app>
