--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
 	                <artifactId>jsp-api</artifactId>
 	                <version>2.2</version>
                 </dependency>
+                
+         <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20131018</version>
+    </dependency>
+    	<dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-jaxrs</artifactId>
+            <version>1.9.13</version>
+        </dependency>
                
 	</dependencies>
 	<build>
