--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,8 +52,22 @@
         
         <context-param>
    			<param-name>contextConfigLocation</param-name>
-   			<param-value>/WEB-INF/SpringDispatcher-servlet.xml</param-value>
+   			<param-value>
+   				/WEB-INF/SpringDispatcher-servlet.xml
+   				/WEB-INF/application-security.xml
+   				/WEB-INF/root-context.xml
+   			</param-value>
 		</context-param>
+		
+		<filter>
+			<filter-name>springSecurityFilterChain</filter-name>
+			<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		</filter>
+
+		<filter-mapping>
+			<filter-name>springSecurityFilterChain</filter-name>
+			<url-pattern>/*</url-pattern>
+		</filter-mapping>
 
 		<listener>
    			<listener-class>
