--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,10 @@
         <listener>
                 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
         </listener>
+        
+        <welcome-file-list>
+        	<welcome-file>/index.jsp</welcome-file>
+    	</welcome-file-list>
 
         <servlet>
                 <servlet-name>appServlet</servlet-name>
