--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,23 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <display-name>library</display-name>
-        <context-param>
-		<param-name>log42jConfigLocation</param-name>
-		<param-value>classpath:log4j2.xml</param-value>
-		</context-param>
+
+       <context-param>
+                <param-name>log4jConfigLocation</param-name>
+                <param-value>log4j2.xml</param-value>
+       </context-param>       
         
         <listener>
-                <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-        </listener>
-        
+	        <listener-class>org.apache.logging.log4j.core.web.Log4jContextListener</listener-class>
+	    </listener> 
+	    
+	    <!-- <listener>
+	        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	    </listener>  -->
+
+
+
+     
         <welcome-file-list>
         	<welcome-file>/index.jsp</welcome-file>
     	</welcome-file-list>
@@ -77,16 +85,11 @@
 			<url-pattern>/*</url-pattern>
 		</filter-mapping>
 
-		<listener>
-   			<listener-class>
-      			org.springframework.web.context.ContextLoaderListener
-   			</listener-class>
-		</listener>
-		
-		<context-param>   
-       		<param-name>log4jConfiguration</param-name>
-       		<param-value>log4j2.xml</param-value>
-    	</context-param>
-     
+                 <listener>
+                           <listener-class>
+                              org.springframework.web.context.ContextLoaderListener
+                           </listener-class>
+                </listener>
+                
 
 </web-app>
