--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
@@ -49,6 +50,41 @@
 	<classpathentry kind="var" path="M2_REPO/org/json/json/20131018/json-20131018.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.13/jackson-mapper-asl-1.9.13.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-core-asl/1.9.13/jackson-core-asl-1.9.13.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-extras/3.0.3/tiles-extras-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-core/3.0.3/tiles-core-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-api/3.0.3/tiles-api-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-api/1.0.3/tiles-request-api-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-digester/commons-digester/2.0/commons-digester-2.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.8.0/commons-beanutils-1.8.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/jcl-over-slf4j/1.5.8/jcl-over-slf4j-1.5.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-servlet-wildcard/1.0.3/tiles-request-servlet-wildcard-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-servlet/1.0.3/tiles-request-servlet-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-mustache/1.0.3/tiles-request-mustache-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/github/spullara/mustache/java/compiler/0.8.4/compiler-0.8.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/12.0.1/guava-12.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/code/findbugs/jsr305/1.3.9/jsr305-1.3.9.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-jsp/3.0.3/tiles-jsp-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-servlet/3.0.3/tiles-servlet-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-template/3.0.3/tiles-template-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-autotag-core-runtime/1.1.0/tiles-autotag-core-runtime-1.1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-jsp/1.0.3/tiles-request-jsp-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-freemarker/3.0.3/tiles-freemarker-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-freemarker/1.0.3/tiles-request-freemarker-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/freemarker/freemarker/2.3.15/freemarker-2.3.15.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-velocity/3.0.3/tiles-velocity-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/velocity/velocity-tools/2.0/velocity-tools-2.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2/commons-collections-3.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/oro/oro/2.0.8/oro-2.0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/velocity/velocity/1.6.2/velocity-1.6.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.4/commons-lang-2.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-request-velocity/1.0.3/tiles-request-velocity-1.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-el/3.0.3/tiles-el-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-mvel/3.0.3/tiles-mvel-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mvel/mvel2/2.0.11/mvel2-2.0.11.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-ognl/3.0.3/tiles-ognl-3.0.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/ognl/ognl/2.7.3/ognl-2.7.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jboss/javassist/3.7.ga/javassist-3.7.ga.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tiles/tiles-compat/3.0.3/tiles-compat-3.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
