--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,17 @@
 			<version>6.8.7</version>
 			<scope>test</scope>
 		</dependency>
-            
-<!--          <dependency>
-            <groupId>org.apache.logging.log4j.osgi</groupId>
-            <artifactId>log4j-core-osgi-reduced</artifactId>
-            <version>2.0-beta9</version>
-        </dependency> -->
-
+<!-- *********  Logging  **************** -->
+		<!-- <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.0-beta9</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
@@ -38,21 +42,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-web</artifactId>
-			<version>2.0-beta7</version>
-		</dependency>
-		
-		<!-- <dependency>
-			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-1.2-api</artifactId>
 			<version>2.0-beta9</version>
-		</dependency> -->
+		</dependency>
 		            
-
-
-
-		                  
-
+<!-- ***********  Hibernate   ***************** -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -174,11 +168,25 @@
 			<version>1.9.13</version>
 		</dependency>
 
-		<dependency>
+		 <dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-extras</artifactId>
 			<version>3.0.3</version>
-		</dependency>
+			<exclusions>
+	            <exclusion>
+	                <groupId>org.slf4j</groupId>
+	                <artifactId>slf4j-nop</artifactId>
+	            </exclusion>
+	            <exclusion>
+	                <groupId>org.slf4j</groupId>
+	                <artifactId>slf4j-api</artifactId>
+	             </exclusion>
+	             <exclusion>
+	                 <groupId>org.slf4j</groupId>
+	                 <artifactId>jcl-over-slf4j</artifactId>
+	             </exclusion>
+        </exclusions>
+		</dependency> 
 	</dependencies>
 	
 	<build>
