--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,14 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
         <display-name>library</display-name>
 
-       <context-param>
+       <!-- <context-param>
                 <param-name>log4jConfigLocation</param-name>
                 <param-value>log4j2.xml</param-value>
        </context-param>       
         
         <listener>
 	        <listener-class>org.apache.logging.log4j.core.web.Log4jContextListener</listener-class>
-	    </listener> 
+	    </listener>  -->
 	    
 	    <!-- <listener>
 	        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
