--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<version>4.2.7.SP1</version>
 		</dependency>
 		<dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-validator</artifactId>
+	        <version>5.0.2.Final</version>
+	    </dependency>
+		            
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.27</version>
