--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		            
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -130,6 +136,11 @@
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
 		</dependency>
 		
 		<dependency>
@@ -204,25 +215,7 @@
 			<version>1.9.13</version>
 		</dependency>
 
-		 <!-- <dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>tiles-extras</artifactId>
-			<version>3.0.3</version>
-			<exclusions>
-	            <exclusion>
-	                <groupId>org.slf4j</groupId>
-	                <artifactId>slf4j-nop</artifactId>
-	            </exclusion>
-	            <exclusion>
-	                <groupId>org.slf4j</groupId>
-	                <artifactId>slf4j-api</artifactId>
-	             </exclusion>
-	             <exclusion>
-	                 <groupId>org.slf4j</groupId>
-	                 <artifactId>jcl-over-slf4j</artifactId>
-	             </exclusion>
-        </exclusions>
-		</dependency>  -->
+		
 	</dependencies>
 	
 	<build>
