--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-        <display-name>library</display-name>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+      version="3.0">
+       <display-name>library</display-name>
 
        <context-param>
                 <param-name>log4jConfigLocation</param-name>
@@ -12,6 +13,10 @@
 	     <listener>
 	        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	    </listener>  
+	    
+	    <!-- <session-config>
+		     <tracking-mode>COOKIE</tracking-mode>
+		</session-config> -->
 
 
 
@@ -74,6 +79,8 @@
    				/WEB-INF/root-context.xml
    			</param-value>
 		</context-param>
+		
+		
 		
 		<filter>
 			<filter-name>springSecurityFilterChain</filter-name>
