--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/resources/messages_ru.properties=UTF-8
 encoding//src/main/resources/messages_uk.properties=UTF-8
+encoding//src/main/webapp/view/librarian/users.jsp=UTF-8
 encoding//src/main/webapp/view/top.jsp=UTF-8
 encoding/<project>=UTF-8
