--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,17 @@
 			<artifactId>tiles-template</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.json</groupId>
