--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<version>6.8.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5</version>
+		</dependency>
+		            
 <!-- *********  Logging  **************** -->
 		 <dependency>
 			<groupId>org.slf4j</groupId>
@@ -103,6 +109,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
 		            
