--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -112,16 +112,24 @@
         </listener>
                 
         <!-- Prior to Servlet 3.0 define either an error-code or an exception-type but not both -->
-<!-- 	 	<error-page>
-	  		Define error page to react on Java exception
+ 	 	<error-page>
 	  		<exception-type>java.lang.Throwable</exception-type>
-	  		The location of the resource to display in response to the error will point to the Spring MVC handler method
 	  		<location>/error</location>
 	 	</error-page>
 	 
 	 	<error-page>
 	  		<error-code>404</error-code>
 	  		<location>/error404</location>
- 		</error-page> -->
+ 		</error-page>
+ 		
+ 		<error-page>
+	  		<error-code>403</error-code>
+	  		<location>/error403</location>
+ 		</error-page>
+ 		
+ 		<error-page>
+	  		<error-code>400</error-code>
+	  		<location>/error400</location>
+ 		</error-page>
 
 </web-app>
